# ops_project

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
ai_docs/: 00_readme.md
ai_docs/context/: README.md
ai_docs/examples/: README.md  standard_facade_and_use_cases.md  standard_infrastructure_adapter.md  standard_node_evolution.md  standard_ports.md  standard_service.md  standard_workflow_node.md
ai_docs/rules/: architecture_rules.md  coding_style_rules.md  naming_rules.md  review_checklist.md  tech_stack_baseline.md  testing_rules.md
alembic/: env.py
alembic/versions/: 20260426_0001_create_outline_tables.py
app/: api.py  main.py  worker.py
app/bootstrap/: ai_gateway.py  api.py  container.py  module_registry.py  novel_generate.py  settings.py  startup.py  wiring.py  worker.py
app/modules/: README.md
config/: ai_gateway.example.json
docs/: application_minimal_ci_baseline.md  architecture_review_checklist.md  cicd_baseline.md  configuration_and_secrets_management.md  deployment_environment_baseline.md  enterprise_project_documentation_gap_list.md  naming_conventions.md  new_project_architecture_baseline_clean.md  observability_and_alerting.md  release_change_and_rollback.md  security_baseline.md  technical_architecture_baseline.md  新项目脚手架_纯骨架版_模块化单体.md
docs/architecture_baseline/: 00-overview.md  01-top-level-modules.md  (+3 more)
openspec/: config.yaml  实现状态.md
scripts/: dev_start.py  scan_secrets.py
temp_docs/: outline_http_test.md
(+320 files in other folders)
